deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: multipay-utility-payments-api-ns
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multipay-utility-payments-api
  namespace: multipay-utility-payments-api-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multipay-utility-payments-api
  template:
    metadata:
      namespace: multipay-utility-payments-api-ns
      labels:
        app: multipay-utility-payments-api
        version: v1
    spec:
      containers:
        - name: multipay-utility-payments-api
          image: ${IMAGE}
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: container-reg-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: multipay-utility-payments-api-svc
  namespace: multipay-utility-payments-api-ns
  labels:
    app: multipay-utility-payments-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: multipay-utility-payments-api
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: multipay-utility-payments-api-vts
  namespace: multipay-utility-payments-api-ns
spec:
  hosts:
    - multipay.${CLUSTER_ENVIRONMENT}.${CLUSTER_DOMAIN}
  gateways:
    - global-gateway.default.svc.cluster.local
  http:
    - match:
      - uri:
          prefix: /api
      route:
      - destination:
          host: multipay-utility-payments-api-svc
          port:
            number: 80
---
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: multipay-utility-payments-api-se-db
#   namespace: multipay-utility-payments-api-ns
# spec:
#   hosts:
#     - "postgres-db-staging.postgres.database.azure.com"
#   location: MESH_EXTERNAL
#   ports:
#     - number: 5432
#       name: tcp-multipay-utility-payments-api-se-db
#       protocol: TCP
